--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.guanguoxiang'
-project.archivesBaseName="Compiler"
+project.archivesBaseName="compiler"
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.auto.service:auto-service:1.0-rc2'
